syntax = "proto3";

package admin.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "common/common.proto";

option go_package = "github.com/leaf-rain/raindata/admin/api/admin/v1;v1";

// The greeting service definition.
service Auth {
  // 登陆
  rpc Login (LoginReq) returns (User) {
    option (google.api.http) = {
      post: "/api/v1/login"
      body: "*"
    };
  }
  // 登出
  rpc Logout (LogoutReq) returns (LogoutReply) {
    option (google.api.http) = {
      post: "/api/v1/logout"
      body: "*"
    };
  }
  // 获取公共内容
  rpc GetPublicContent (PublicContentReq) returns (PublicContentReply) {
    option (google.api.http) = {
      post: "/api/v1/content"
      body: "*"
    };
  }
  // 获取用户权限
  rpc GetPermissions (PermissionsReq) returns (PermissionsReply) {
    option (google.api.http) = {
      post: "/api/v1/permissions"
      body: "*"
    };
  }
}

message User {
  uint64 id = 1;
  string user_name = 2 [json_name = "user_name"];
  string password = 3 [json_name = "password"];
  string nick_name = 4 [json_name = "nick_name"];
  string email = 5 [json_name = "email"];
  repeated string roles = 6;
  string token = 7;
}

// 请求 - 登录
message LoginReq {
  string user_name = 1 [json_name = "user_name"];
  string password = 2;
}
// 回应 - 登录
message LoginReply {
  User user = 1;
}

// 请求 - 登出
message LogoutReq {
  common.BaseHead head = 1;
}
// 回应 - 登出
message LogoutReply {
  uint64 id = 1;
}

message PublicContentReq {
  common.BaseHead head = 1;
}

message PublicContentReply {
  string content = 1;
}

message PermissionsReq{
  common.BaseHead head = 1;
}

message PermissionsReply{
  repeated string permissions = 1;
}